0.3.4   xxx
 - fix: https://github.com/opensolutions/ViMbAdmin/issues/3
 - add: Support new mailbox password hashes: crypt, sha1 and salted sha1 and md5
        (old issue 9 from Google Code: http://code.google.com/p/vimbadmin/issues/detail?id=9)
 - fix: Changes in 0.3.2 prevented wildcard aliases
       
0.3.3   2011-09-02
 - fix: Critical regression introduced in 0.3.2 preventing the editing of
        aliases

0.3.2   2011-09-01
 - fix: https://github.com/opensolutions/ViMbAdmin/issues/1
 - add: optional parameter in application.ini (skipVersionCheck) to
        tell ViMbAdmin to skip the version check on login
        See: https://github.com/opensolutions/ViMbAdmin/issues/2
 - fix: we now check for duplicate mailboxes (and aliases) rather
        than letting Doctrine throw exceptions for uniqueness 
        constraints. Thanks maysara for the bug report.
 - fix: validate new aliases and mailboxes which was not being done
        previously

0.3.1   2011-08-23
 - Forgot to update changelog got 0.3 release.

0.3     2011-08-23
 - Changes required for the migration to GitHub. No new features / bugfixes 
   or functionality.

0.2.6   2011-08-08
 - fix: trim passwords at login and when entered by an admin
 - fix: could not edit aliases

0.2.5   2011-05-23
 - add: CSS code for demo system at http://www.opensolutions.ie/vimbadmin/
 - add: new favicon based on logo from Limeworks Australia - http://www.limeworks.com.au
 - fix: issue #5 in vimbadmin: mktime throws a strict error (r61)
 - fix: issue #8 in vimbadmin: Cannot add alias from Mailbox view (r66)
 - fix: the autocomplete functionality (used on the Edit / Add Alias page) (r63)
 - fix: the possible "Fatal error: spl_autoload() ... Class Doctrine_Event could not be loaded in Doctrine_Record ..." (r64)
 - fix: the "inArray" JavaScript validator functionality was broken (r65)
 - upd: jQuery 1.5.2
 - upd: jQuery Validation 1.8.0
 - fix: add StringToLower filter to domain, mailbox and alias forms


0.2.4   2011-04-07