@@ -47,10 +47,13 @@ defaults.mailbox.homedir = "/home/vmail/"
 
 ; The password hashing function to use
 ; one of:
-;   "plain"      - password stored as clearttext 
-;   "md5"        - password hashed using MD5 without salt
-;   "md5.salted" - password hashed using MD5 without salt
-;   "crypt"      - standard des hash (compatible with MySQL ENCRYPT and courier - set a two character hash below) 
+;   "plain"       - password stored as clearttext 
+;   "md5"         - password hashed using MD5 without salt
+;   "md5.salted"  - password hashed using MD5 without salt
+;   "crypt"       - standard des hash (compatible with MySQL ENCRYPT and courier - set a two character hash below)
+;   "md5.crypt"   - MD5 based salted password hash nowadays commonly used in /etc/shadow. (compatible with Dovecot) Requires min 8 character hash below. 
+;   "sha1"        - password hashed using sha1 without salt 
+;   "sha1.salted" - password hashed using sha1 with salt defined below
 defaults.mailbox.password_scheme = "md5"
 
 ; a hash to use when storing passwords. Typically used with "crypt"
