@@ -3,6 +3,8 @@
  - add: Support new mailbox password hashes: crypt, sha1 and salted sha1 and md5
         (old issue 9 from Google Code: http://code.google.com/p/vimbadmin/issues/detail?id=9)
  - fix: Changes in 0.3.2 prevented wildcard aliases
+ - add: MD5-CRYPT hashing used by, for example, Dovecot. This addresses:
+        http://code.google.com/p/vimbadmin/issues/detail?id=6
        
 0.3.3   2011-09-02
  - fix: Critical regression introduced in 0.3.2 preventing the editing of
